--- a/index.html
+++ b/index.html
@@ -5,25 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Stu's Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
-<body>
-    <header>
-        <section id=name>Stu Eliades</section>
-        <a href=index.html>About</a>
-        <a href=portfolio.html>Portfolio</a>
-        <a href=contact.html>Contact</a>  
-    </header>
 
-    <wrapper>
+<body class="body">
+    <header class="header">
+        <div class="header-content">
+          <div>
+            <section class="name">Stu Eliades</section>
+          <ul>  
+            <li><a href=index.html>About</a></li>
+            <li><a href=portfolio.html>Portfolio</a></li>
+            <li><a href=contact.html>Contact</a></li>  
+          </ul>
+          </div>
+        </div>
+    </header>
+  <br><br>  
+    <section class="wrapper">
         <h1>About Me</h1>
 
         <hr>
 
-        <P>I have spent the last 5 years as a Unit Manager for Capital One, managing a team of 15-20 phone agents and case workers. I have spent this time honing my leadership and influencing skills, and I am comfortable presenting in front of large groups. My management style is based on developing an enviornemt of trust where the team feels comfortable failing and learning from those failures. This gives my agents the comfort to experiment together and iterate quickly.</P>
+        <P><img class="img" src=./assets/images/me.jpg height="200px" width="200px"></img>
+          I have spent the last 5 years as a Unit Manager for Capital One, managing a team of 15-20 phone agents and case workers. I have spent this time honing my leadership and influencing skills, and I am comfortable presenting in front of large groups. My management style is based on developing an enviornemt of trust where the team feels comfortable failing and learning from those failures. This gives my agents the comfort to experiment together and iterate quickly.</P>
 
-        <p>I got into coding because people mangement has not tapped into my creative problem solving skills. I have really enjoyed having to think about my work in a totally different way, and I love the instant gratification of making a website or fixing an error.</p>
-    </wrapper>
+        <p id="p2">I got into coding because people mangement has not tapped into my creative problem solving skills. I have really enjoyed having to think about my work in a totally different way, and I love the instant gratification of making a website or fixing an error.</p>
+    </section>
     
-    <footer>Copyright</footer>
+    <footer class="footer">Copyright</footer>
 </body>
 </html>
