--- a/portfolio.html
+++ b/portfolio.html
@@ -5,23 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Stu's Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-<body>
-    <header>
-        <section id=name>Stu Eliades</section>
-        <a href=index.html>About</a>
-        <a href=portfolio.html>Portfolio</a>
-        <a href=contact.html>Contact</a>  
+<body class="body">
+    <header class="header">
+        <div class="header-content">
+          <div>
+            <section class="name">Stu Eliades</section>
+          <ul>  
+            <li><a href=index.html>About</a></li>
+            <li><a href=portfolio.html>Portfolio</a></li>
+            <li><a href=contact.html>Contact</a></li>  
+          </ul>
+          </div>
+        </div>
     </header>
-
-    <wrapper>
+  <br><br> 
+    <section class="wrapper">
         <h1>Portfolio</h1>
 
         <hr>
-
+        <div class="container">
+            <img src=./assets/images/pic1.jpg alt="Hangman">
+            <div class="text-block"> 
+              <h2>Hangman</h2>
+            </div>
+        </div>
+        <div class="container">
+            <img src=./assets/images/pic2.jpg alt="RPG Game">
+            <div class="text-block"> 
+              <h2>RPG Game</h2>
+            </div>
+        </div> 
+        <div class="container">
+            <img src=./assets/images/pic3.jpg alt="Trivia Game">
+            <div class="text-block"> 
+              <h2>Trivia Game</h2>
+            </div>
+        </div>   
+        <div class="container">
+            <img src=./assets/images/pic4.jpg alt="Rutgers Info Widget">
+            <div class="text-block"> 
+              <h2>Rutgers Info Widget</h2>
+            </div>
+        </div>
+        <div class="container">
+            <img src=./assets/images/pic5.jpg alt="Rock Paper Scissors">
+            <div class="text-block"> 
+              <h2>Rock Paper Scissors</h2>
+            </div>
+          </div>
+        </section>
     
-    </wrapper>
-    
-    <footer>Copyright</footer>
+      <footer class="footer">Copyright</footer>
 </body>
 </html>
