--- a/index.html
+++ b/index.html
@@ -1,38 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Stu's Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Stu's Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 
-<body class="body">
-    <header class="header">
-        <div class="header-content">
-          <div>
-            <section class="name">Stu Eliades</section>
-          <ul>  
-            <li><a href=index.html>About</a></li>
-            <li><a href=portfolio.html>Portfolio</a></li>
-            <li><a href=contact.html>Contact</a></li>  
-          </ul>
-          </div>
-        </div>
-    </header>
-  <br><br>  
-    <section class="wrapper">
-        <h1>About Me</h1>
+<body>
+  <header>
+    <div class="header-content">
+      <div>
+        <section class="name">Stu Eliades</section>
+        <ul>
+          <li><a href="index.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <br><br>
+  <div class="container">
+    <h1>About Me</h1>
 
-        <hr>
+    <hr>
 
-        <P><img class="img" src=./assets/images/me.jpg height="200px" width="200px"></img>
-          I have spent the last 5 years as a Unit Manager for Capital One, managing a team of 15-20 phone agents and case workers. I have spent this time honing my leadership and influencing skills, and I am comfortable presenting in front of large groups. My management style is based on developing an enviornemt of trust where the team feels comfortable failing and learning from those failures. This gives my agents the comfort to experiment together and iterate quickly.</P>
-
-        <p id="p2">I got into coding because people mangement has not tapped into my creative problem solving skills. I have really enjoyed having to think about my work in a totally different way, and I love the instant gratification of making a website or fixing an error.</p>
-    </section>
+    <img class="img" src="./assets/images/me.jpg" height="200px" width="200px"></img>
     
-    <footer class="footer">Copyright</footer>
+    <p>I have spent the last 5 years as a Unit Manager for Capital One, managing a team of 15-20 phone agents and case
+    workers. I have spent this time honing my leadership and influencing skills, and I am comfortable presenting in
+    front of large groups. My management style is based on developing an enviornemt of trust where the team feels
+    comfortable failing and learning from those failures. This gives my agents the comfort to experiment together and
+    iterate quickly. I got into coding because people mangement has not tapped into my creative problem solving skills. I have
+    really enjoyed having to think about my work in a totally different way, and I love the instant gratification of
+    making a website or fixing an error.</P>
+
+    <p id="p2">In my free time I love hangin out with my wife and 3 kids. I'm a big sports fan, and I play a lot of fantasy sports. My wife and I enjoy binge watching Netflix, going to baseball games, and visitng aquariums.</p>
+
+  </div>
+
+
+  <footer>Copyright &copy;</footer>
 </body>
+
 </html>
