--- a/portfolio.html
+++ b/portfolio.html
@@ -1,62 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Stu's Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-</head>
-<body class="body">
-    <header class="header">
-        <div class="header-content">
-          <div>
-            <section class="name">Stu Eliades</section>
-          <ul>  
-            <li><a href=index.html>About</a></li>
-            <li><a href=portfolio.html>Portfolio</a></li>
-            <li><a href=contact.html>Contact</a></li>  
-          </ul>
-          </div>
-        </div>
-    </header>
-  <br><br> 
-    <section class="wrapper">
-        <h1>Portfolio</h1>
 
-        <hr>
-        <div class="container">
-            <img src=./assets/images/pic1.jpg alt="Hangman">
-            <div class="text-block"> 
-              <h2>Hangman</h2>
-            </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Stu's Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+  <header>
+    <div class="header-content">
+      <div>
+        <section class="name">Stu Eliades</section>
+        <ul>
+          <li><a href="index.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <br><br>
+  <div class="container clearfix">
+    <h1>Portfolio</h1>
+
+    <hr>
+
+      <div class="image">
+        <img src="./assets/images/pic1.jpg" alt="Hangman" height="150px" width="300px">
+        <div class="text-block">
+          <h5>Hangman</h5>
         </div>
-        <div class="container">
-            <img src=./assets/images/pic2.jpg alt="RPG Game">
-            <div class="text-block"> 
-              <h2>RPG Game</h2>
-            </div>
-        </div> 
-        <div class="container">
-            <img src=./assets/images/pic3.jpg alt="Trivia Game">
-            <div class="text-block"> 
-              <h2>Trivia Game</h2>
-            </div>
-        </div>   
-        <div class="container">
-            <img src=./assets/images/pic4.jpg alt="Rutgers Info Widget">
-            <div class="text-block"> 
-              <h2>Rutgers Info Widget</h2>
-            </div>
+      </div>
+      <div class="image">
+        <img src="./assets/images/pic2.jpg" alt="RPG Game" height="150px" width="300px">
+        <div class="text-block">
+          <h5>RPG Game</h5>
         </div>
-        <div class="container">
-            <img src=./assets/images/pic5.jpg alt="Rock Paper Scissors">
-            <div class="text-block"> 
-              <h2>Rock Paper Scissors</h2>
-            </div>
-          </div>
-        </section>
+      </div>
+      <div class="image">
+        <img src="./assets/images/pic3.jpg" alt="Trivia Game" height="150px" width="300px">
+        <div class="text-block">
+          <h5>Trivia Game</h5>
+        </div>
+      </div>
+      <div class="image">
+        <img src="./assets/images/pic4.jpg" alt="Rutgers Info Widget" height="150px" width="300px">
+        <div class="text-block">
+          <h5>Rutgers Info Widget</h5>
+        </div>
+      </div>
+      <div class="image">
+        <img src="./assets/images/pic5.jpg" alt="Rock Paper Scissors" height="150px" width="300px">
+        <div class="text-block">
+          <h5>Rock Paper Scissors</h5>
+        </div>
+      </div>
     
-      <footer class="footer">Copyright</footer>
+      
+    </div>
+  
+
+  <footer>Copyright &copy;</footer>
 </body>
+
 </html>
